--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/core/templates/base.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/core/templates/base.html
@@ -23,7 +23,7 @@
       {% block nav %}
       {% endblock nav %}
       {% include '_messages.html' with messages=messages %}
-      <div class="flex-grow-1">
+      <div class="container">
         {% block content %}
         {% endblock content %}
       </div>
